EKS/helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: robot-shop
  name: robot-shop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: test.tools.teleeye.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8080
